# TEST_A04 — Filter by assigned status
appId: com.vegavizag.admin
---
- launchApp
- waitForAnimationToEnd:
    timeout: 3500
- runFlow: "./_login_helper.yaml"
- tapOn: "Bookings"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "assigned"
- waitForAnimationToEnd
- assertVisible: "assigned"
